Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntObjTextObjField.quorum
class Main
    Text v
    v:SetValue(text)
    action Main
        Test(v)
    end

    action Test(Integer var)
    end
end
